# multi-agent-financial-system

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_ollama.py  video_instructions
config/: settings.py
reports/: AAPL_report_20251204_111249.json  AAPL_report_20251204_112210.json  AAPL_report_20251204_112211.json
results/: AAPL_analysis_result.json
scripts/: install_ollama.sh  start_system.py
src/: main.py
src/agents/: analysis_agent.py  base_agent.py  data_agent.py  report_agent.py
src/chains/: data_analysis_chain.py  technical_analysis_chain.py
src/dashboard/: app.py
src/llm/: llm_factory.py
src/mcp_servers/: financial_data_server.py
src/memory/: short_term_memory.py
src/monitoring/: health_monitor.py
src/optimization/: fault_tolerance.py  parallel_processing.py
src/rag/: knowledge_graph.py  retriever.py
