[project]
name = "multi-agent-financial-system"
version = "1.0.0"
description = "Multi-Agent Intelligent Financial Analysis System"
authors = [
    {name = "Anna Alekseeva", email = "anna@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.28.0",
    "langchain>=0.1.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
mcp = [
    "mcp>=0.1.0",
    "fastapi>=0.104.0",
]
monitoring = [
    "prometheus-client>=0.17.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]